# zero-api-key-web-search

./: .env.searxng.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  ITERATION.md  LICENSE  MATURITY_REPORT.md  README.md  SECURITY.md  SKILL.md  SUPPORT.md  _meta.json  competitors.txt  docker-compose.searxng.yml  gemini-extension.json  glama.json  package.json  pyproject.toml  requirements.txt  setup.py
.claude-plugin/: SKILL.md
.codex/: SKILL.md
.cursor/rules/: cross-validated-search.md  zero-api-key-web-search.md
.gemini/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/copilot/: instructions.md
.github/workflows/: ci.yml  main-ci.yml
.hermes/: mcp-servers.yaml
.kiro/steering/: cross-validated-search.md  zero-api-key-web-search.md
.nanobot/: nanobot.yaml
.nanobot/agents/: researcher.md
.openclaw/: openclaw.json
.opencode/: instructions.md
benchmarks/: VERDICT_MATRIX.md  __init__.py  claims.jsonl  provider_benchmark.py  run_benchmark.py
benchmarks/fixtures/: contested-announcement.json  contested-two-provider.json  insufficient-evidence-rumor.json  insufficient-evidence-weak-support.json  likely-false-correction.json  likely-false-dual-provider.json  likely-supported-authority.json  likely-supported-searxng.json  page-aware-likely-false.json  python-stable-release.json  supported-multi-source.json  supported-page-aware-dual.json
clean_research_assets/: MANIFEST.md
cross_validated_search/: __init__.py  browse_page.py  core.py  evidence_report.py  mcp_server.py  search.py  search_web.py  verify_claim.py
cross_validated_search/providers/: __init__.py  ddgs.py  searxng.py  tavily.py
docs/: ABSTRACT.md  agent-developer-guide.md  agent-search-controls.md  benchmark-plan.md  benchmarks.md  brightdata-provider.md  claim-ledger.md  claude-code.md  ecosystem-readiness.md  evaluation.md  evidence-report.md  external-threads.md  final-pr-plan.md  gemini-submission-checklist.md  launch-kit.md  manus.md  npm-package.md  release.md  searxng-self-hosted.md  trust-model.md  use-cases.md  v22-features.md  verification-model.md  why-not-just-search.md
examples/: cli-quickstart.md  demo-transcript.md  gemini.md  openclaw.md
forum/: forum_index.json  pipeline_state.json
forum/build_logs/: agent-search-infrastructure_2026-05-03_01-16-17_context.json  agent-search-infrastructure_2026-05-03_01-18-47_context.json  cross-validated-search_2026-04-17_02-35-01_context.json  web-search-infra_2026-04-30_23-19-32_context.json
forum/candidates/: andreas-hanselowski.json  david-soria-parra.json  isabelle-augenstein.json  pepa-atanasova.json  preslav-nakov.json  reihaneh-rabbany.json
forum/councils/: cross-validated-search-main-council.json
forum/domains/: agent-search-infrastructure.json  cross-validated-search.json  web-search-infra.json
forum/gap_analyses/: web-search-infra_2026-04-30_23-22-47.json
forum/promotion_audits/: andreas-hanselowski.json  isabelle-augenstein.json  pepa-atanasova.json  preslav-nakov.json  reihaneh-rabbany.json
forum/scoring_reports/: agent-search-infrastructure_2026-05-03_01-16-57.json  agent-search-infrastructure_2026-05-03_01-21-49.json  cross-validated-advanced_iteration5.json  cross-validated-search_2026-04-17_02-43-40.json  cross-validated-search_2026-04-17_expert-council-depth.json  cross-validated-search_2026-04-17_iteration1.json  cross-validated-search_2026-04-17_rescore_iteration2.json  cross-validated-search_2026-04-19_rescore_iteration3.json  cross-validated-search_2026-04-19_rescore_iteration4.json  cross-validated-search_2026-04-19_rescore_iteration6.json  web-search-infra_2026-04-30_23-22-27.json  web-search-infra_2026-04-30_23-30-49.json  web-search-infra_2026-04-30_23-36-59.json  web-search-infra_2026-04-30_23-38-34.json  web-search-infra_2026-04-30_23-39-23.json  web-search-infra_2026-04-30_23-41-12.json  web-search-infra_2026-04-30_23-42-11.json
forum/source_dossiers/: andreas-hanselowski.json  david-soria-parra.json  isabelle-augenstein.json  pepa-atanasova.json  preslav-nakov.json  reihaneh-rabbany.json
free_web_search/: __init__.py  browse_page.py  core.py  evidence_report.py  mcp_server.py  search.py  search_web.py  transport.py  verify_claim.py
free_web_search/providers/: __init__.py  base.py  ddgs.py  searxng.py
free_web_search/skills/: SKILL.md
npm/: cli-wrapper.cjs
prompts/: reflection-prompt.md
scripts/: browse.py  browse_page.py  browser_search.py  export_artifacts.sh  search.py  search_local_web.py  search_web.py  start-searxng.sh  ultimate.py  ultimate_search.py  ultimate_search_v4.py  ultimate_v4_1.py  validate-free-path.sh
skills/zero-api-key-web-search/: SKILL.md
tests/: test_benchmark_dataset.py  test_benchmark_runner.py  test_browse_page.py  test_calibration_note.py  test_claim_decomposition.py  test_cli_integration.py  test_concurrent_and_retry.py  test_evidence_report.py  test_mcp_server.py  test_multilingual_conflict.py  test_search_web.py  test_self_hosted_assets.py  test_transport.py  test_verify_claim.py
zero_api_key_web_search/: __init__.py  browse_page.py  cache.py  context.py  core.py  evidence_report.py  mcp_server.py  provider_setup.py  search.py  search_web.py  transport.py  verify_claim.py
zero_api_key_web_search/providers/: __init__.py  (+6 more)
zero_api_key_web_search_compat/: __init__.py  browse_page.py  core.py  evidence_report.py  mcp_server.py  search.py  search_web.py  transport.py  verify_claim.py
(+28 files in other folders)
