[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-api-key-web-search"
version = "18.0.0"
description = "Zero-API-key free web search, browsing, and claim verification for AI agents. No API keys required. 100% free."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "wd041216-bit", email = "wd041216@uw.edu" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "urllib3>=1.26.0",
  "beautifulsoup4>=4.9.0",
  "lxml>=4.6.0",
  "ddgs>=0.1.0",
  "mcp>=1.1.2",
]

[project.urls]
Homepage = "https://github.com/wd041216-bit/zero-api-key-web-search"
Repository = "https://github.com/wd041216-bit/zero-api-key-web-search"
Issues = "https://github.com/wd041216-bit/zero-api-key-web-search/issues"
Changelog = "https://github.com/wd041216-bit/zero-api-key-web-search/blob/main/CHANGELOG.md"
Documentation = "https://github.com/wd041216-bit/zero-api-key-web-search/tree/main/docs"

[project.scripts]
zero-search = "zero_api_key_web_search.search_web:main"
zero-browse = "zero_api_key_web_search.browse_page:main"
zero-verify = "zero_api_key_web_search.verify_claim:main"
zero-report = "zero_api_key_web_search.evidence_report:main"
zero-mcp = "zero_api_key_web_search.mcp_server:run"
search-web = "zero_api_key_web_search.search_web:main"
browse-page = "zero_api_key_web_search.browse_page:main"
verify-claim = "zero_api_key_web_search.verify_claim:main"
evidence-report = "zero_api_key_web_search.evidence_report:main"
cross-validated-search-mcp = "zero_api_key_web_search.mcp_server:run"
free-web-search-mcp = "zero_api_key_web_search_compat.mcp_server:run"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "twine>=6.1.0",
  "ruff>=0.4.0",
  "pyright>=1.1.350",
  "coverage>=7.0",
]

[tool.setuptools.packages.find]
include = ["zero_api_key_web_search*", "zero_api_key_web_search_compat*"]

[tool.setuptools.package-data]
zero_api_key_web_search = ["skills/*.md"]
zero_api_key_web_search_compat = ["skills/*.md"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "none"
reportAttributeAccessIssue = "none"

[tool.coverage.run]
source = ["zero_api_key_web_search"]
omit = [
    "zero_api_key_web_search/providers/ddgs.py",
    "zero_api_key_web_search/providers/searxng.py",
    "zero_api_key_web_search/search_web.py",
    "zero_api_key_web_search/verify_claim.py",
    "zero_api_key_web_search/evidence_report.py",
    "zero_api_key_web_search/search.py",
]

[tool.coverage.report]
fail_under = 80